Push the close button a bit further away from the edge of the screen to avoid scrollbar interference on macOS.

--- a/assets/_styles.scss
+++ b/assets/_styles.scss
@@ -309,7 +309,7 @@ body.admin-color-light #wp-admin-bar-query-monitor:not(.qm-all-clear):not(:hover
 	}
 
 	#qm-title .qm-button-container-close {
-		margin-right: 5px !important;
+		margin-right: 10px !important;
 	}
 
 	#qm-title .qm-button-container-close .dashicons {
